2003-11-17  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/makeinfo.c (cm_uref):
	* makeinfo/xml.c: use ulink for @uref with Docbook.

2003-11-16  Karl Berry  <karl@gnu.org>

	* util/install-info.c: protoize.
	* util/texindex.c: protoize.
	* util/dir-example (protoize,unprotoize): add.

	* doc/texinfo.tex (\everytab): new \toks.
	(\headitem): use it to typeset in bold.
	(\item): reset it.

2003-11-15  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (quotation): document it.
	* doc/texinfo.tex (\quotation): accept optional argument.
	(\doquotation): new macro to test for and typeset it.

	* doc/texinfo.txi (Multitable Rows): document @headitem.

	* doc/texinfo.tex (\headitem): error by default, redefine inside
	@multitable (= \dotable).  New command suggested by Arnold.

2003-11-15  Akim Demaille  <akim@epita.fr>

	* util/texi2dvi (fatal): New function. Use it.
	(txiversion): Be robust to broken texinfo.tex.

	* doc/texinfo.txi (example): mention use of @r for annotations.

2003-11-15  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/cmds.c: new command @headitem.

	* makeinfo/insertion.c (cm_headitem): new function.

	* makeinfo/insertion.h: new variables to keep head item state.

	* makeinfo/multi.c (multitable_item, end_multitable):
	* makeinfo/xml.c (xml_end_multitable_row, xml_end_multitable):
	insert thead element if @headitem is used.
	
	* makeinfo/xml.h: new element THEAD.

	* makeinfo/texinfo.dtd: updated multitable structure.

	* NEWS: announced @headitem.

2003-11-14  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/makeinfo.c (cm_xref): make use of third and fifth arguments
	of @xref with Docbook.

	* makeinfo/xml.c: use Docbook citetitle for @cite.

2003-11-13  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex: doc fixes.

	* configure.ac, NEWS: autoconf 2.59.

2003-11-13  Akim Demaille  <akim@epita.fr>

	* configure.ac: Use AC_CHECK_DECLS, not txi_CHECK_DECLS.
	Also use # instead of dnl for comments.
	* acinclude.m4: Remove.

2003-11-14  Alper Ersoy  <dirt@gtk.org>
